src/test/ui/borrowck/borrowck-while-break.stderr
error[E0381]: use of possibly uninitialized variable: `v`
  --> $DIR/borrowck-while-break.rs:17:20
   |
LL |     println!("{}", v); //~ ERROR use of possibly uninitialized variable: `v`
   |                    ^ use of possibly uninitialized `v`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
